--- a/myfavevideos.html
+++ b/myfavevideos.html
@@ -10,8 +10,8 @@
 
 <!--Embedding Video-->
 <video width="600" height="350" controls>
-    <source src="imgs/LOML [4EA55AC].mp4" type="video/mp4">
-    <source src="imgs/HBD LOML [4EA55AC].mp4" type="video/ogg">
+    <source src="imgs/song.mp4" type="video/mp4">
+    <source src="imgs/song.mp4" type="video/ogg">
     Your browser does not support 
 </video>
 <br> <br>
